--- a/content/blogs/project1.Rmd
+++ b/content/blogs/project1.Rmd
@@ -1,6 +1,14 @@
 ---
-title: "post1"
-output: html_document
+categories:
+- ""
+- ""
+date: "2017-10-31T22:42:51-05:00"
+description: "Movies"
+draft: false
+image: pic07.jpg
+keywords: ""
+slug: project1
+title: "Movies"
 ---
 
 ```{r setup, include=FALSE}
