--- a/public/blogs/project1.Rmd
+++ b/public/blogs/project1.Rmd
@@ -3,7 +3,7 @@ categories:
 - ""
 - ""
 date: "2017-10-31T22:42:51-05:00"
-description: "Movies"
+description: "We take a look at the movies dataset and see how the film industry has changed over time."
 draft: false
 image: pic07.jpg
 keywords: ""
