--- a/public/blogs/gapminder.Rmd
+++ b/public/blogs/gapminder.Rmd
@@ -157,6 +157,7 @@ grouping_table
 
 plot2
 ```
+
 We see that there is an almost linear relation between fertility rate and GDP for most regions except 'Middle East and North Africa'. We also see a steep trend in regions with more developing countries like in the case of 'South Asia' and 'Latin America'.
 
 
@@ -186,6 +187,7 @@ plot3<- ggplot(plot_mortality, aes(x=year, y=mean_mortality_rate, group=region))
 plot3
 
 ```
+
 Which countries had the most and least improvement in mortality rate? 
 
 ```{r, echo=TRUE, warning=FALSE}
@@ -206,6 +208,7 @@ worst_5<-mortality_rate_filtered %>%
 best_5
 worst_5
 ```
+
 We see that Asian countries have had the major change in mortality rate and Subsaharan African countries have the least change in mortality rates.
 
 Relationship between primary school enrollment and fertility rate
@@ -224,9 +227,14 @@ geom_smooth()+ #adding the trend line
 
 plot4
 ```
+
 We see that as the fertility rate is increasing, the primary school enrollment decreases. This is prevalent in a lot of African countries like Afganistan. However we also see a lot of outliers like in case of Middle Eastern contries where the fertility rate is more however the primary school enrollment is towards the higher end as well. 
 
-```{r, echo=TRUE, warning=FALSE}
+#Correlation matrix
+
+Lastly we will see how each variable is correlated with one another in the gapminder datset.
+
+```{r, echo=FALSE, warning=FALSE}
 corrmat<-main_table %>%
   drop_na(mortality_rate,fertility_rate,life_expectancy_rate,primary_school_enrollment,hiv_rate) %>%
   select(mortality_rate,fertility_rate,life_expectancy_rate,primary_school_enrollment,hiv_rate)
@@ -237,6 +245,11 @@ head(cormat)
 library(reshape2)
 melted_cormat <- melt(cormat)
 head(melted_cormat)
+```
+
+```{r, echo=TRUE, warning=FALSE}
 ggplot(data = melted_cormat, aes(x=Var1, y=Var2, fill=value)) + 
   geom_tile()
 ```
+
+
